--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             attributes.name = "App";
             attributes.align = "middle";
             swfobject.embedSWF(
-                "App.swf", "flashContent", 
+                "Main.swf", "flashContent", 
                 "100%", "100%", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
@@ -94,13 +94,13 @@
         
         <noscript>
             <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="App">
-                <param name="movie" value="App.swf" />
+                <param name="movie" value="Main.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#dedede" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
                 <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="App.swf" width="100%" height="100%">
+                <object type="application/x-shockwave-flash" data="Main.swf" width="100%" height="100%">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#dedede" />
                     <param name="allowScriptAccess" value="sameDomain" />
